Add media query prototypes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>RomLuc's Personal Blog Website</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="box">Header</header>
+    <sidebar class="box">Menu</sidebar>
+    <section class="box">Content</section>
+    <footer class="box">Footer</footer>
+  </body>
 </html>
