Add menu to sidebar

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header class="box">Header</header>
-    <sidebar class="box">Menu</sidebar>
+    <header class="box">
+      <h1>RomLuc's Blog</h1>
+      <h2>
+        Lorem ipsum dolor sit amet.
+      </h2>
+    </header>
+
+    <sidebar class="box">
+      <div class="menu-topic box">Post 1</div>
+      <div class="menu-topic box">Post 2</div>
+      <div class="menu-topic box">Post 3</div>
+    </sidebar>
     <section class="box">Content</section>
     <footer class="box">Footer</footer>
   </body>
