--- a/post.html
+++ b/post.html
@@ -4,6 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog Post for RomLuc's Personal Blog Website</title>
+    <link rel="stylesheet" href="post.css" />
   </head>
-  <body></body>
+  <body>
+    <body>
+      <header class="box">
+        <h1>RomLuc's Blog</h1>
+        <h2>
+          <a href="index.html">Back to blog</a>
+        </h2>
+      </header>
+
+      <sidebar class="box">
+        <div class="menu-topic box">Post 1</div>
+        <div class="menu-topic box">Post 2</div>
+        <div class="menu-topic box">Post 3</div>
+      </sidebar>
+      <section class="content">
+        <div class="card">
+          <p>
+            asdf
+          </p>
+        </div>
+        <div class="card">
+          <p>
+            asdf
+          </p>
+        </div>
+        <div class="card">
+          <p>
+            asdf
+          </p>
+        </div>
+      </section>
+      <footer class="box">Footer</footer>
+    </body>
+  </body>
 </html>
