Add style and images to post

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RomLuc's Personal Travel Blog</title>
+    <title>RomLuc's Blog</title>
     <link rel="stylesheet" href="index.css" />
     <script
       src="https://kit.fontawesome.com/7e77b9f671.js"
@@ -14,7 +14,7 @@
     <header class="box">
       <h1>RomLuc's Blog</h1>
       <h2>
-        Personal. Travel. Blog.
+        Personal. Blog.
       </h2>
       <div class="search-box">
         <input
@@ -31,23 +31,27 @@
     <sidebar class="box">
       <ul>
         <li class="menu-item">Post 1</li>
-        <ul>
-          <li class="submenu-item">asdf1</li>
-        </ul>
         <li class="menu-item">Post 2</li>
         <li class="menu-item">Post 3</li>
+        <li class="menu-item">Post 4</li>
       </ul>
+      <div class="social-media">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
     </sidebar>
     <section class="content">
+      <p class="content-header">
+        Welcome to my personal blog! Stay tuned for travel, pets, music and
+        more!
+      </p>
       <div class="card">
-        <a href="post.html">Check it out!</a>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel
-          enim ac nunc egestas tristique quis non sapien. Morbi a odio nisl.
-          Maecenas eu risus id libero pretium bibendum. Quisque egestas
-          vulputate turpis id volutpat. Sed eget enim nec elit pellentesque
-          congue eleifend a quam.
+          <a href="post.html">Check it out!</a>
+          Dogs and cats are now permitted in most shopping malls in brazil!
         </p>
+        <i class="fal fa-dog"></i>
       </div>
       <div class="card">
         <p>
@@ -55,6 +59,7 @@
           gravida rutrum, lacus purus dignissim elit, eu pulvinar elit nunc
           convallis ipsum. Donec pellentesque elementum nibh quis viverra.
         </p>
+        <i class="fad fa-drum"></i>
       </div>
       <div class="card">
         <p>
@@ -62,23 +67,7 @@
           nisl, non mollis dui purus eget diam. Nam nulla odio, laoreet eget
           risus quis, tempor rhoncus ante. Curabitur vel ornare justo.
         </p>
-      </div>
-      <div class="card">
-        <a href="post.html">Blog post 1</a>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel
-          enim ac nunc egestas tristique quis non sapien. Morbi a odio nisl.
-          Maecenas eu risus id libero pretium bibendum. Quisque egestas
-          vulputate turpis id volutpat. Sed eget enim nec elit pellentesque
-          congue eleifend a quam.
-        </p>
-      </div>
-      <div class="card">
-        <p>
-          Duis iaculis quis sapien consectetur egestas. Morbi viverra, leo vitae
-          gravida rutrum, lacus purus dignissim elit, eu pulvinar elit nunc
-          convallis ipsum. Donec pellentesque elementum nibh quis viverra.
-        </p>
+        <i class="fad fa-plane-alt"></i>
       </div>
       <div class="card">
         <p>
@@ -86,6 +75,7 @@
           nisl, non mollis dui purus eget diam. Nam nulla odio, laoreet eget
           risus quis, tempor rhoncus ante. Curabitur vel ornare justo.
         </p>
+        <i class="fad fa-futbol"></i>
       </div>
     </section>
     <footer class="box">made by RomLuc - 2020</footer>
