--- a/post.html
+++ b/post.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog Post for RomLuc's Personal Blog Website</title>
     <link rel="stylesheet" href="post.css" />
+    <script
+      src="https://kit.fontawesome.com/7e77b9f671.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <body>
@@ -14,29 +18,41 @@
           <a href="index.html">Back to blog</a>
         </h2>
       </header>
-
+      <section class="content">
+        <img
+          src="/personal-blog-website/images/dog1.jpg"
+          alt="dog at the shopping mall"
+        />
+        <h2>
+          When it comes to pet market, Brazil is the second largest in the
+          world!
+        </h2>
+        <p>
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+          per inceptos himenaeos. Suspendisse potenti. Nulla vel orci
+          ullamcorper, laoreet ex non, ullamcorper ex.
+        </p>
+      </section>
       <sidebar class="box">
+        <div class="search-box">
+          <input
+            type="text"
+            class="search-term"
+            placeholder="Search for posts here..."
+          />
+          <button type="submit" class="search-button">
+            <i class="fal fa-search"></i>
+          </button>
+        </div>
+        <div class="social-media">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
         <div class="menu-topic box">Post 1</div>
         <div class="menu-topic box">Post 2</div>
         <div class="menu-topic box">Post 3</div>
       </sidebar>
-      <section class="content">
-        <div class="card">
-          <p>
-            asdf
-          </p>
-        </div>
-        <div class="card">
-          <p>
-            asdf
-          </p>
-        </div>
-        <div class="card">
-          <p>
-            asdf
-          </p>
-        </div>
-      </section>
       <footer class="box">Footer</footer>
     </body>
   </body>
