Advance in adding style to both pages

--- a/index.html
+++ b/index.html
@@ -16,21 +16,29 @@
       <h2>
         Personal. Blog.
       </h2>
-      <div class="search-box">
-        <input
-          type="text"
-          class="search-term"
-          placeholder="Search for posts here..."
-        />
-        <button type="submit" class="search-button">
-          <i class="fal fa-search"></i>
-        </button>
+      <div class="bar">
+        <ul class="bar-list">
+          <li><a href="#">pets.</a></li>
+          <li><a href="#">travel.</a></li>
+          <li><a href="#">sports.</a></li>
+          <li><a href="#">music.</a></li>
+        </ul>
+        <div class="search-box">
+          <input
+            type="text"
+            class="search-term"
+            placeholder="Search for posts here..."
+          />
+          <button type="submit" class="search-button">
+            <i class="fal fa-search"></i>
+          </button>
+        </div>
       </div>
     </header>
 
     <sidebar class="box">
-      <ul>
-        <li class="menu-item">Post 1</li>
+      <ul class="menu-list">
+        <li class="menu-item"><p>Post 1</p></li>
         <li class="menu-item">Post 2</li>
         <li class="menu-item">Post 3</li>
         <li class="menu-item">Post 4</li>
@@ -46,6 +54,23 @@
         Welcome to my personal blog! Stay tuned for travel, pets, music and
         more!
       </p>
+      <section class="photo-grid">
+        <img
+          src="/personal-blog-website/images/plane.jpg"
+          class="img1"
+          alt="photo of a window of a plane"
+        />
+        <img
+          src="/personal-blog-website/images/cars.jpg"
+          class="img2"
+          alt="photo of a car in a city road"
+        />
+        <img
+          src="/personal-blog-website/images/cat.jpg"
+          class="img3"
+          alt="photo of an orange cat"
+        />
+      </section>
       <div class="card">
         <p>
           <a href="post.html">Check it out!</a>
