--- a/post.html
+++ b/post.html
@@ -23,11 +23,24 @@
           src="/personal-blog-website/images/dog1.jpg"
           alt="dog at the shopping mall"
         />
-        <h2>
-          When it comes to pet market, Brazil is the second largest in the
-          world!
-        </h2>
-        <p>
+
+        <div class="headers">
+          <h2>
+            When it comes to pet market, Brazil is the second largest in the
+            world!
+          </h2>
+          <h6 class="subheaders">
+            <p>By romluc - 10 feb 2020</p>
+            <span>
+              27
+              <i class="fas fa-eye"></i>
+              5
+              <i class="fas fa-comments"></i>
+            </span>
+          </h6>
+        </div>
+
+        <p class="text">
           Class aptent taciti sociosqu ad litora torquent per conubia nostra,
           per inceptos himenaeos. Suspendisse potenti. Nulla vel orci
           ullamcorper, laoreet ex non, ullamcorper ex.
@@ -49,9 +62,15 @@
           <i class="fab fa-twitter"></i>
           <i class="fab fa-instagram"></i>
         </div>
-        <div class="menu-topic box">Post 1</div>
-        <div class="menu-topic box">Post 2</div>
-        <div class="menu-topic box">Post 3</div>
+        <section class="sections">
+          <p>Sections</p>
+          <div class="menu-topic box">Pet World<i class="fal fa-dog"></i></div>
+          <div class="menu-topic box">
+            Travel<i class="fal fa-plane-alt"></i>
+          </div>
+          <div class="menu-topic box">Sports<i class="fal fa-futbol"></i></div>
+          <div class="menu-topic box">Music<i class="fal fa-drum"></i></div>
+        </section>
       </sidebar>
       <footer class="box">Footer</footer>
     </body>
