Add pictures to blog page

--- a/post.html
+++ b/post.html
@@ -17,6 +17,7 @@
         <h2>
           <a href="index.html">Back to blog</a>
         </h2>
+        <div class="bar"></div>
       </header>
       <section class="content">
         <img
@@ -43,8 +44,18 @@
         <p class="text">
           Class aptent taciti sociosqu ad litora torquent per conubia nostra,
           per inceptos himenaeos. Suspendisse potenti. Nulla vel orci
-          ullamcorper, laoreet ex non, ullamcorper ex.
+          ullamcorper, laoreet ex non, ullamcorper ex. Class aptent taciti
+          sociosqu ad litora torquent per conubia nostra, per inceptos
+          himenaeos. Suspendisse potenti. Nulla vel orci ullamcorper, laoreet ex
+          non, ullamcorper ex. Class aptent taciti sociosqu ad litora torquent
+          per conubia nostra, per inceptos himenaeos. Suspendisse potenti. Nulla
+          vel orci ullamcorper, laoreet ex non, ullamcorper ex.
         </p>
+
+        <img
+          src="/personal-blog-website/images/dog2.jpg"
+          alt="Dog inside a shopping cart"
+        />
       </section>
       <sidebar class="box">
         <div class="search-box">
@@ -64,15 +75,26 @@
         </div>
         <section class="sections">
           <p>Sections</p>
-          <div class="menu-topic box">Pet World<i class="fal fa-dog"></i></div>
-          <div class="menu-topic box">
-            Travel<i class="fal fa-plane-alt"></i>
-          </div>
-          <div class="menu-topic box">Sports<i class="fal fa-futbol"></i></div>
-          <div class="menu-topic box">Music<i class="fal fa-drum"></i></div>
+          <ul>
+            <li>Pet World<i class="fal fa-dog"></i></li>
+            <li>Travel<i class="fal fa-plane-alt"></i></li>
+            <li>Sports<i class="fal fa-futbol"></i></li>
+            <li>Music<i class="fal fa-drum"></i></li>
+          </ul>
+        </section>
+        <section class="past-posts">
+          <p>Past months</p>
+          <ul>
+            <li>Dec 2019</li>
+            <li>Nov 2019</li>
+            <li>Oct 2019</li>
+            <li>Sep 2019</li>
+            <li>Aug 2019</li>
+            <li>Jul 2019</li>
+          </ul>
         </section>
       </sidebar>
-      <footer class="box">Footer</footer>
+      <footer class="footer">by romluc 2020</footer>
     </body>
   </body>
 </html>
