--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2>
         Personal. Blog.
       </h2>
-      <div class="bar">
+      <navbar class="bar">
         <ul class="bar-list">
           <li><a href="#">pets.</a></li>
           <li><a href="#">travel.</a></li>
@@ -33,7 +33,7 @@
             <i class="fal fa-search"></i>
           </button>
         </div>
-      </div>
+      </navbar>
     </header>
 
     <sidebar class="box">
@@ -73,7 +73,9 @@
       </section>
       <div class="card">
         <p>
-          <a href="post.html">Check it out!</a>
+          <button class="btn-card">
+            <a href="post.html">Check it out!</a>
+          </button>
           Dogs and cats are now permitted in most shopping malls in brazil!
         </p>
         <i class="fal fa-dog"></i>
