--- a/post.html
+++ b/post.html
@@ -93,6 +93,15 @@
             <li>Jul 2019</li>
           </ul>
         </section>
+        <article class="about">
+          <p>About the Author</p>
+          <img src="/personal-blog-website/images/bio.jpg" alt="romluc photo" />
+          <h3>
+            Romluc is a part-time Front-End developer (for now) from Brazil.
+            Currently working from home. He is passionate about learning new
+            technologies.
+          </h3>
+        </article>
       </sidebar>
       <footer class="footer">by romluc 2020</footer>
     </body>
