Update folders tree

--- a/post.html
+++ b/post.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog Post for RomLuc's Personal Blog Website</title>
-    <link rel="stylesheet" href="post.css" />
+    <link rel="stylesheet" href="./css/post.css" />
     <script
       src="https://kit.fontawesome.com/7e77b9f671.js"
       crossorigin="anonymous"
@@ -20,10 +20,7 @@
         <div class="bar"></div>
       </header>
       <section class="content">
-        <img
-          src="/personal-blog-website/images/dog1.jpg"
-          alt="dog at the shopping mall"
-        />
+        <img src="./images/dog1.jpg" alt="dog at the shopping mall" />
 
         <div class="headers">
           <h2>
@@ -52,10 +49,7 @@
           vel orci ullamcorper, laoreet ex non, ullamcorper ex.
         </p>
 
-        <img
-          src="/personal-blog-website/images/dog2.jpg"
-          alt="Dog inside a shopping cart"
-        />
+        <img src="./images/dog2.jpg" alt="Dog inside a shopping cart" />
       </section>
       <sidebar class="box">
         <div class="search-box">
@@ -95,7 +89,7 @@
         </section>
         <article class="about">
           <p>About the Author</p>
-          <img src="/personal-blog-website/images/bio.jpg" alt="romluc photo" />
+          <img src="./images/bio.jpg" alt="romluc photo" />
           <h3>
             Romluc is a part-time Front-End developer (for now) from Brazil.
             Currently working from home. He is passionate about learning new
