--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RomLuc's Blog</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <script
       src="https://kit.fontawesome.com/7e77b9f671.js"
       crossorigin="anonymous"
@@ -55,18 +55,14 @@
         more!
       </p>
       <section class="photo-grid">
+        <img src="./images/cat.jpg" class="img1" alt="photo of an orange cat" />
         <img
-          src="/personal-blog-website/images/cat.jpg"
-          class="img1"
-          alt="photo of an orange cat"
-        />
-        <img
-          src="/personal-blog-website/images/plane.jpg"
+          src="./images/plane.jpg"
           class="img2"
           alt="photo of a window of a plane"
         />
         <img
-          src="/personal-blog-website/images/cars.jpg"
+          src="./images/cars.jpg"
           class="img3"
           alt="photo of a car in a city road"
         />
