Update file structure

--- a/html/post.html
+++ b/html/post.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog Post for RomLuc's Personal Blog Website</title>
-    <link rel="stylesheet" href="./css/post.css" />
+    <link rel="stylesheet" href="../css/post.css" />
     <script
       src="https://kit.fontawesome.com/7e77b9f671.js"
       crossorigin="anonymous"
@@ -15,12 +15,12 @@
       <header class="box">
         <h1>RomLuc's Blog</h1>
         <h2>
-          <a href="index.html">Back to blog</a>
+          <a href="../index.html">Back to blog</a>
         </h2>
         <div class="bar"></div>
       </header>
       <section class="content">
-        <img src="./images/dog1.jpg" alt="dog at the shopping mall" />
+        <img src="../images/dog1.jpg" alt="dog at the shopping mall" />
 
         <div class="headers">
           <h2>
@@ -49,7 +49,7 @@
           vel orci ullamcorper, laoreet ex non, ullamcorper ex.
         </p>
 
-        <img src="./images/dog2.jpg" alt="Dog inside a shopping cart" />
+        <img src="../images/dog2.jpg" alt="Dog inside a shopping cart" />
       </section>
       <sidebar class="box">
         <div class="search-box">
@@ -89,7 +89,7 @@
         </section>
         <article class="about">
           <p>About the Author</p>
-          <img src="./images/bio.jpg" alt="romluc photo" />
+          <img src="../images/bio.jpg" alt="romluc photo" />
           <h3>
             Romluc is a part-time Front-End developer (for now) from Brazil.
             Currently working from home. He is passionate about learning new
