--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="card">
         <p>
           <button class="btn-card">
-            <a href="post.html">Check it out!</a>
+            <a href="./html/post.html">Check it out!</a>
           </button>
           Dogs and cats are now permitted in most shopping malls in brazil!
         </p>
